--- a/starWarsSearch.html
+++ b/starWarsSearch.html
@@ -43,7 +43,7 @@
 
         <input
           type="text"
-          oninput="debounce(main,1000)"
+          oninput="debounce(main,600)"
           id="query"
           placeholder="Search characters"
         />
@@ -53,3 +53,8 @@
   </body>
 </html>
 <script src="starWarsSearch.js"></script>
+<script type="module">
+  import { append } from "./components/appendSeason2.js";
+  //console.log(append);
+  append();
+</script>
